<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="welcome">基于智能移动终端的桥梁检测系统的研发</string>
    <string name="app_name">桥梁数据采集系统</string>
    <string name="app_copyright">版权所有：山西省交通科学研究院 桥梁检测所</string>
    <string name="app_version">v1.0 Beta</string>
    <string name="action_settings">Settings</string>
    <string name="qr_code">扫描二维码</string>
    <string name="data_sync">数据同步</string>
    <string name="back">返回</string>
    <string name="last_step">上一步</string>
    <string name="next_step">下一步</string>
    <string name="finish_btn">完成</string>
    <string name="pls_enter">请输入</string>
    <string name="pls_choose">请选择</string>
    <string name="pls_click">请点击查看</string>
    <string name="bn_add">添加</string>
    <string name="bn_submit">提交</string>
    <string name="bn_edit">修改</string>
    <string name="bn_delete">删除</string>
    <string name="zero">0</string>
    
    <string name="L0">L0</string>
    <string name="R0">R0</string>
    <string name="L1">L1</string>
    <string name="R1">R1</string>
    
    <string name="L">L</string>
    <string name="R">R</string>
    
    <!-- 起始页 -->
    <string name="main_title">欢迎使用桥梁数据采集系统</string>
    <string name="bridge_base_edit">桥梁基本数据编辑</string>
    <string name="disease_info_add">病害信息添加</string>
    <string name="detailed_base_show">桥梁基本数据查看</string>
    <string name="detailed_disease_show">病害信息查看</string>
    <string name="detailed_disease_edit">病害信息修改</string>
    
    <!-- 桥梁基本数据编辑页-识别1 -->
    <string name="bridge_name">桥梁名称</string>    
    <string name="path_num">路线号</string>
    
    <string name="path_name">路线名称</string>
    <string name="path_type">路线类型</string>
    
    <string name="rode_grade">公路技术等级</string>    
    <string name="order_num">顺序号</string>
    
    <string name="location">所在地</string>    
    <string name="center_stake">中心桩号</string>
    
    <string name="custody_unit">管养单位</string>    
    <string name="across_name">跨越地物名称</string>
    
    <string name="across_type">跨越地物类型</string>
    <string name="bridge_nature">桥梁性质</string>
    
    <!-- 桥梁基本数据编辑页-识别2 -->
    <string name="bridge_classify">桥梁分类</string>    
    <string name="design_load">设计荷载等级</string>
    
    <string name="bridge_use">桥梁用途</string>
    <string name="bridge_status">桥梁状态</string>
    
    <string name="upper_type">上部结构类型</string>
    
    <string name="material_code">材料编码</string>
    <string name="bridge_panel">桥面板位</string>
    
    <string name="stress_pattern">受力型式</string>
    <string name="support_type">支座类型</string>
    
    <string name="bridge_type">桥型</string>
    
    <!-- 桥梁基本数据编辑页-识别3 -->
    <string name="lower_type">下部结构类型</string>
    
    <string name="pier_material">桥墩材料</string>
    <string name="section_form">桥墩截面形式</string>
    <string name="pier_type">桥墩类型</string>
    <string name="section_shape">桥墩截面形状</string>
    
    <string name="abutment_material">桥台材料</string>
    <string name="abutment_type">桥台类型</string>
    
    <string name="pier_abutment_material">墩台基础材料</string>
    <string name="pier_abutment_base">墩台基础</string>
    
    <string name="bridge_decking">桥面系类型</string>
    
    <string name="deck_type">桥面铺装类型</string>
    <string name="joint_type">伸缩缝类型</string>
    
    <!-- 桥梁基本数据编辑页-结构 -->
    <string name="bridge_span">桥跨组合</string>
    <string name="longest_span">最大跨径</string>
    
    <string name="total_len">桥梁全长</string>
    <string name="bridge_wide">桥宽组合</string>
    
    <string name="full_wide">桥面全宽</string>
    <string name="clear_wide">桥面净宽</string>
    
    <string name="bridge_high">桥高</string>
    <string name="high_limit">桥梁限高</string>
    
    <string name="building_time">建桥时间</string>
    <string name="navigation_level">通航等级</string>
    
    <string name="section_high">跨中截面高</string>
    <string name="deck_profile_grade">桥面纵坡</string>
    
    <!-- 桥梁基本数据编辑页-部件1 -->
    <string name="lower_parts">下部结构部件</string>
    
    <string name="wing_wall">翼墙、耳墙</string>
    <string name="conical_slope">锥坡</string>
    
    <string name="protection_slope">护坡个数</string>
    <string name="pier_detail">桥墩详情</string>
    
    <string name="abutment_num">桥台个数</string>
    <string name="pa_num">墩台基础个数</string>
    
    <string name="bed_num">河床个数</string>
    <string name="reg_structure">调治构造物个数</string>
    
    <!-- 桥墩详情弹出框 -->
    <string name="start_pier">起始桥墩号</string>
    <string name="end_pier">终止桥墩号</string>
    <string name="per_pier_num">每个桥墩墩身数</string>
    <string name="bent_cap">是否有盖梁</string>
    <string name="tie_beam">是否有系梁</string>
    
    <!-- 桥梁基本数据编辑页-部件2 -->
    <string name="upper_parts">上部结构部件</string>
    
    <string name="load_detail">上部承重构件详情</string>
    <string name="general_detail">上部一般构件详情</string>
    <string name="support_detail">支座详情</string>
    
    <!-- 承重/一般构件详情弹出框 -->
    <string name="start_stride">起始跨号</string>
    <string name="end_stride">终止跨号</string>
    <string name="per_stride_num">每跨个数</string>
    
    <!-- 支座详情弹出框 -->
    <string name="start_spt">起始墩（台）号</string>
    <string name="end_spt">终止墩（台）号</string>
    <string name="per_row_num">每墩（台）排数</string>
    <string name="per_spt_num">每排支座数</string>
    
    <string name="decking_parts">桥面系部件</string>
    
    <string name="deck_num">桥面铺装个数</string>
    <string name="joint_detail">伸缩缝装置个数</string>
    
    <string name="sidewalk">人行道</string>
    <string name="guardrail">栏杆、护栏</string>
    
    <string name="drainage_system">防排水系统个数</string>
    <string name="illuminated_sign">照明、标志个数</string>
    
    <!-- 病害信息页 -->
    <string name="disease_title">病害信息页</string>
    
    <!-- 上部 -->
    
    <!-- 梁式桥 -->
    <string name="girder">主梁</string>
    <string name="wet_joint">湿接缝</string>
    <string name="diaphragm">横隔板</string>
    <string name="support">支座</string>
    
    <!-- 板式桥 -->
    <string name="hollow_slab">空心板</string>
    <string name="hinge_joint">铰缝</string>
    
    <!-- 拱式桥 -->
    <string name="main_ring">主拱圈</string>
    <string name="arch_structure">拱上结构</string>
    <string name="deck_slab">桥面板</string>
    
    <!-- 钢、桁架拱桥 -->
    <string name="arch_piece">钢、桁架拱片</string>
    <string name="sway_bracing">横向联结系</string>
    
    <!-- 其他 -->
    <string name="load">上部承重构件</string>
    <string name="general">上部一般构件</string>
    
    <!-- 下部 -->
    <string name="rb_pier">桥墩</string>
    <string name="rb_bent_cap">盖梁</string>
    <string name="rb_tie_beam">系梁</string>
    <string name="rb_abutment_body">桥台身</string>
    <string name="rb_abutment_capping">桥台帽</string>
    <string name="rb_pa">墩台基础</string>
    <string name="rb_bed">河床</string>
    <string name="rb_reg_structure">调治构造物</string>
    <string name="rb_wing_wall">翼墙、耳墙</string>
    <string name="rb_conical_slope">锥坡</string>
    <string name="rb_protection_slope">护坡</string>
    
    <!-- 桥面系 -->
    <string name="rb_bridge_deck">桥面铺装</string>
    <string name="rb_joint">伸缩缝装置</string>
    <string name="rb_watertight">防排水系统</string>
    <string name="rb_lighting">照明、标志</string>
    
    <!-- 上部结构-主梁/湿接缝  -->
    <string name="voids_pits">蜂窝、麻面</string>
    <string name="peeling_off_angle">剥落、掉角</string>
    <string name="cavitation">空洞、孔洞</string>
    <string name="fissure">裂缝</string>
    <string name="other_disease">其他病害</string>
    
    <string name="vertical_fissure">竖向裂缝</string>
    <string name="landscape_fissure">横向裂缝</string>
    <string name="slant_fissure">斜向裂缝</string>
    <string name="lengthways_fissure">纵向裂缝</string>
    <string name="net_fissure">网裂缝</string>
    <string name="standard_fissure">水平裂缝</string>
    
    <string name="dis_desc1">纵向距本跨梁端</string>
    <string name="dis_desc">距下缘</string>
    <string name="dis_desc2">米  到</string>
    <string name="dis_desc3">米</string>
    
    <string name="dis_desc4">面积</string>
    <string name="dis_desc5">长度</string>
    <string name="dis_desc6">宽度</string>
    
    <string name="left_flange">左翼板</string>
    <string name="right_flange">右翼板</string>
    <string name="left_web">左腹板</string>
    <string name="right_web">右腹板</string>
    <string name="bottom_plate">底板</string>
    
    <string name="bn_disease_image">选择病害图片</string>
    <string name="bn_disease_camera">打开照相机</string>
    <string name="disease_image">病害图片</string>
    
    <!-- 上部结构-支座  -->
    <string name="season_cracking">老化、开裂</string>
    <string name="defect">缺陷</string>
    <string name="disengaging">串动、脱空或剪切超限</string>
    <string name="module_damage">组件损坏</string>
    <string name="plate_abrasion">聚四氟乙烯滑板磨损</string>
    <string name="displacement">位移、转角超限</string>
    
    <!-- 下部结构-桥墩  -->
    <string name="leakage_tendon">剥落、露筋</string>
    <string name="masonry_defects">圬工砌体缺陷</string>
    
    <!-- 下部结构-盖梁、系梁  -->
    <string name="corrosion">钢筋锈蚀</string>
    <string name="carbonation">混凝土碳化、腐蚀</string>
    
    <!-- 下部结构-桥台身  -->
    <string name="peel_off">剥落</string>
    <string name="abrasion">磨损</string>
    <string name="vehicle_jump">桥台跳车</string>
    <string name="drainage">台背排水</string>
    
    <!-- 下部结构-桥台帽  -->
    <string name="breakage">破损</string>
    
    <!-- 下部结构-墩台基础  -->
    <string name="scouring">冲刷、淘空</string>
    <string name="washout">冲蚀</string>
    <string name="bottom_paving">河底铺砌</string>
    <string name="sedimentation">沉降</string>
    <string name="slip_tilt">滑移和倾斜</string>
    
    <!-- 下部结构-翼墙、耳墙  -->
    <string name="offset">位移</string>
    <string name="bulging">鼓肚、砌体松动</string>
    
    <!-- 下部结构-锥坡、护坡  -->
    <string name="washing">冲刷</string>
    
    <!-- 下部结构-河床  -->
    <string name="jam">堵塞</string>
    <string name="riverbed">河床变迁</string>
    
    <!-- 下部结构-调治构造物  -->
    <string name="damage">损坏</string>
    <string name="transformation">冲刷、变形</string>
    
    <!-- 桥面系-桥面铺装  -->
    <string name="track">变形（车辙、拥包、高低不平等）</string>
    <string name="bleeding">泛油</string>
    
    <!-- 桥面系-伸缩缝  -->
    <string name="irregularity">凹凸不平</string>
    <string name="anchorage">锚固区缺陷</string>
    <string name="failure">失效</string>
    
    <!-- 桥面系-人行道  -->
    <string name="lost">缺失</string>
    
    <!-- 桥面系-栏杆、护栏  -->
    <string name="crack_up">撞坏、缺失</string>
    
    <!-- 桥面系-防排水系统  -->
    <string name="impeded">排水不畅</string>
    <string name="flaw">排水管、引水槽缺陷</string>
    
    <!-- 桥面系-照明、标志  -->
    <string name="dirty">污损或破坏</string>
    <string name="lack_of_lighting">照明设施缺失</string>
    <string name="sign_missing">标志脱落、缺失</string>
    
    <string name="button_ok">OK</string>
    <string name="msg_camera_framework_bug">Sorry, the Android camera encountered a problem. You may need to restart the device.</string>
	<string name="viewfinderview_status_text1">将二维码/条码放入取景框内</string>
    <string name="viewfinderview_status_text2">即可自动扫描</string>
  
</resources>
