<?xml version="1.0" encoding="utf-8"?>  
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" 
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:focusable="true"
    android:focusableInTouchMode="true" >

    <TextView
        android:id="@+id/tv_disease_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp" />
    
    <com.qjs.bridgedb.disease.subfragment.FlowRadioGroup 
        android:id="@+id/rg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="gone"
        android:layout_marginLeft="20dp" >
        
        <RadioButton
           android:id="@+id/rg1_rbtn_peel_off"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:textSize="@dimen/radio_button_font"
           android:text="@string/peel_off" />

        <RadioButton
           android:id="@+id/rg1_rbtn_abrasion"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:textSize="@dimen/radio_button_font"
           android:text="@string/abrasion" />

        <RadioButton
           android:id="@+id/rg1_rbtn_fissure"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:textSize="@dimen/radio_button_font"
           android:text="@string/fissure" />

        <RadioButton
           android:id="@+id/rg1_rbtn_masonry_defects"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:textSize="@dimen/radio_button_font"
           android:text="@string/masonry_defects" />
        
        <RadioButton
           android:id="@+id/rg1_rbtn_vehicle_jump"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:textSize="@dimen/radio_button_font"
           android:text="@string/vehicle_jump" />
        
        <RadioButton
           android:id="@+id/rg1_rbtn_drainage"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:textSize="@dimen/radio_button_font"
           android:text="@string/drainage" />
        
        <RadioButton
           android:id="@+id/rg1_rbtn_other_disease"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:textSize="@dimen/radio_button_font"
           android:text="@string/other_disease" />
        
        <Spinner
	        android:id="@+id/rg1_sp_other_disease"
	        android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:visibility="gone"
			android:entries="@array/abutment_evaluate" />
      
    </com.qjs.bridgedb.disease.subfragment.FlowRadioGroup>
    
    <com.qjs.bridgedb.disease.subfragment.FlowRadioGroup 
        android:id="@+id/rg2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="gone"
        android:layout_marginLeft="20dp" >
        
        <RadioButton
           android:id="@+id/rg2_rbtn_breakage"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:textSize="@dimen/radio_button_font"
           android:text="@string/breakage" />

        <RadioButton
           android:id="@+id/rg2_rbtn_carbonation"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:textSize="@dimen/radio_button_font"
           android:text="@string/carbonation" />

        <RadioButton
           android:id="@+id/rg2_rbtn_fissure"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:textSize="@dimen/radio_button_font"
           android:text="@string/fissure" />        

        <RadioButton
           android:id="@+id/rg2_rbtn_cavitation"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:textSize="@dimen/radio_button_font"
           android:text="@string/cavitation" />
      
    </com.qjs.bridgedb.disease.subfragment.FlowRadioGroup>
    
    <com.qjs.bridgedb.disease.subfragment.FlowRadioGroup 
        android:id="@+id/rg3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="gone"
        android:layout_marginLeft="20dp" >
        
        <RadioButton
           android:id="@+id/rg3_rbtn_scouring"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:textSize="@dimen/radio_button_font"
           android:text="@string/scouring" />

        <RadioButton
           android:id="@+id/rg3_rbtn_leakage_tendon"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:textSize="@dimen/radio_button_font"
           android:text="@string/leakage_tendon" />

        <RadioButton
           android:id="@+id/rg3_rbtn_washout"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:textSize="@dimen/radio_button_font"
           android:text="@string/washout" />

        <RadioButton
           android:id="@+id/rg3_rbtn_bottom_paving"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:textSize="@dimen/radio_button_font"
           android:text="@string/bottom_paving" />
        
        <RadioButton
           android:id="@+id/rg3_rbtn_sedimentation"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:textSize="@dimen/radio_button_font"
           android:text="@string/sedimentation" />
        
        <RadioButton
           android:id="@+id/rg3_rbtn_slip_tilt"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:textSize="@dimen/radio_button_font"
           android:text="@string/slip_tilt" />
        
        <RadioButton
           android:id="@+id/rg3_rbtn_fissure"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:textSize="@dimen/radio_button_font"
           android:text="@string/fissure" />
      
    </com.qjs.bridgedb.disease.subfragment.FlowRadioGroup>
    
    <LinearLayout 
        android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal" >

        <EditText
            android:id="@+id/tv_down1_add_content"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:layout_weight="3"
            android:background="@android:drawable/edit_text"
            android:ems="10"
            android:enabled="true"
            android:gravity="top"
            android:inputType="textMultiLine"
            android:maxLines="10"
            android:minLines="8"
            android:scrollbars="vertical" >

            <requestFocus />
        </EditText>
		
	    <ImageView
	        android:id="@+id/iv_image"  
	        android:layout_width="0dip"
			android:layout_height="fill_parent"
			android:layout_weight="2"
			android:contentDescription="@string/disease_image"
			android:layout_marginLeft="20dp"
			android:layout_marginRight="20dp"
	        android:layout_marginTop="10dp" />
        
    </LinearLayout>
	
    <Button   
        android:id="@+id/btn_image"  
        android:layout_width="wrap_content"   
        android:layout_height="wrap_content"
        android:text="@string/bn_disease_image"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp" />    
	
    <Button
	    android:id="@+id/btn_down1_submit"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_gravity="center_vertical"
	    android:text="@string/bn_submit"
	    android:background="@color/lightgray"
	    android:layout_marginLeft="20dp"
	    android:layout_marginRight="20dp"
	    android:layout_marginTop="10dp"
	    android:layout_marginBottom="20dp"
	    style="?android:attr/buttonBarButtonStyle" />
    
</LinearLayout>